--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         </div>
     </body>
     <footer>
-        <h4 style="font-size: larger; background-image: url(blob:chrome-untrusted://media-app/0bd0b16e-9be7-40fc-a0f0-eaf59c92265d);">purnecol &copy; &reg;</h4>
+        <h4 style="font-size: larger;">purnecol &copy; &reg;</h4>
     </footer>
 </body>
 </html>
