--- a/index.html
+++ b/index.html
@@ -78,6 +78,19 @@
             <h2><a href="#">purnecolsite</a></h2>
             <h3>deze website is zelf gemaakt door purnecol</h3>
         </div>
+        <div class="login">
+            <form>
+                <input type="email" id="email" placeholder="E-Mail" required>
+                <input type="password" id="pss" placeholder="password" required>
+                <button type="submit" id="login">login</button>
+                <button type="reset" id="reset">reset</button>
+                <style>
+                    form {
+                        display: block;
+                    }
+                </style>
+            </form>
+        </div>
     </body>
     <footer>
         <h4 style="font-size: larger;">purnecol &copy; &reg;</h4>
