--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
             margin: 0;
             padding: 0;
             position: relative;
+            float: left;
+            width: 100%;
         }
         #header h1 {
             color: rgb(128, 121, 121);
@@ -65,97 +67,71 @@
             z-index: -2;
             border-radius: 10px;
         }
+        .info {
+            float: left;
+            width: 30%;
+            padding: 20px;
+        }
+        .login {
+            float: left;
+            width: 30%;
+            padding: 20px;
+        }
+        form {
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+
+        input {
+            width: 100%;
+            margin-bottom: 10px;
+            padding: 8px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            box-sizing: border-box;
+        }
+
+        button {
+            width: 100%;
+            padding: 10px;
+            border: none;
+            border-radius: 4px;
+            background-color: #007bff;
+            color: #fff;
+            cursor: pointer;
+        }
+
+        button:hover {
+            background-color: #0056b3;
+        }
     </style>
 </head>
 <body>
     <header id="header">
         <h1>purnecol site</h1>
     </header>
-    <body>
-        <div class="info">
-            <h1>hallo ik ben purnecol</h1>
-            <h2>dit is mijn website</h2>
-            <h2><a href="#">purnecolsite</a></h2>
-            <h3>deze website is zelf gemaakt door purnecol</h3>
-        </div>
-        <div class="login">
-            <form id="loginForm">
-    <h2>Login</h2>
-    <input type="text" id="loginUsername" placeholder="Username" required>
-    <input type="password" id="loginPassword" placeholder="Password" required>
-    <button type="submit">Login</button>
-</form>
-<form id="registerForm" style="display: none;">
-    <h2>Register</h2>
-    <input type="text" id="registerUsername" placeholder="Username" required>
-    <input type="password" id="registerPassword" placeholder="Password" required>
-    <button type="submit">Register</button>
-</form>
-
-<script>
-    const loginForm = document.getElementById('loginForm');
-    const registerForm = document.getElementById('registerForm');
-
-    loginForm.addEventListener('submit', (e) => {
-        e.preventDefault();
-        const username = document.getElementById('loginUsername').value;
-        const password = document.getElementById('loginPassword').value;
-        // Hier kun je de loginfunctionaliteit toevoegen, bijvoorbeeld via een API
-        console.log('Login:', username, password);
-    });
-
-    registerForm.addEventListener('submit', (e) => {
-        e.preventDefault();
-        const username = document.getElementById('registerUsername').value;
-        const password = document.getElementById('registerPassword').value;
-        // Hier kun je de registratiefunctie toevoegen, bijvoorbeeld via een API
-        console.log('Register:', username, password);
-    });
-</script>
-            <style>
-    body {
-        font-family: Arial, sans-serif;
-        margin: 0;
-        padding: 0;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 100vh;
-        background-color: #f0f0f0;
-    }
-
-    form {
-        background-color: #fff;
-        padding: 20px;
-        border-radius: 8px;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    }
-
-    input {
-        width: 100%;
-        margin-bottom: 10px;
-        padding: 8px;
-        border: 1px solid #ccc;
-        border-radius: 4px;
-        box-sizing: border-box;
-    }
-
-    button {
-        width: 100%;
-        padding: 10px;
-        border: none;
-        border-radius: 4px;
-        background-color: #007bff;
-        color: #fff;
-        cursor: pointer;
-    }
-
-    button:hover {
-        background-color: #0056b3;
-    }
-</style>
-        </div>
-    </body>
+    <div class="info">
+        <h1>hallo ik ben purnecol</h1>
+        <h2>dit is mijn website</h2>
+        <h2><a href="#">purnecolsite</a></h2>
+        <h3>deze website is zelf gemaakt door purnecol</h3>
+    </div>
+    <div class="login">
+        <form id="loginForm">
+            <h2>Login</h2>
+            <input type="text" id="loginUsername" placeholder="Username" required>
+            <input type="password" id="loginPassword" placeholder="Password" required>
+            <button type="submit">Login</button>
+        </form>
+        <form id="registerForm" style="display: none;">
+            <h2>Register</h2>
+            <input type="text" id="registerUsername" placeholder="Username" required>
+            <input type="password" id="registerPassword" placeholder="Password" required>
+            <button type="submit">Register</button>
+        </form>
+    </div>
     <footer>
         <h4 style="font-size: larger;">purnecol &copy; &reg;</h4>
     </footer>
