--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
         }
         footer {
             color: white;
-            margin-top: 25%;
             background-repeat: no-repeat;
             background-image: url(https://png.pngtree.com/thumb_back/fh260/background/20210803/pngtree-modern-simple-elegant-dark-blue-landing-page-website-background-image_756950.jpg);
+            clear: both;
+            text-align: center;
+            padding: 20px;
         }
         body {
             border-radius: 15%;
@@ -133,7 +135,8 @@
         </form>
     </div>
     <footer>
-        <h4 style="font-size: larger;">purnecol &copy; &reg;</h4>
+        <h4>purnecol &copy; &reg;</h4>
     </footer>
 </body>
 </html>
+
