--- a/index.html
+++ b/index.html
@@ -103,7 +103,13 @@
             background-color: #007bff;
             color: #fff;
             cursor: pointer;
+            
         }
+
+        #loginForm h2 {
+            color: black;
+        }
+        
 
         button:hover {
             background-color: #0056b3;
