--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
             padding: 20px;
         }
         form {
+            color: black;
             background-color: #fff;
             padding: 20px;
             border-radius: 8px;
